# beanita

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
beanita/: __init__.py  client.py  collection.py  cursor.py  db.py  results.py
tests/: conftest.py  test_beanita.py
tests/odm/: conftest.py  test_cache.py  test_id.py  test_relations.py  test_views.py
tests/odm/documents/: test_aggregate.py  test_bulk_write.py  test_create.py  test_distinct.py  test_init.py  test_inspect.py  test_multi_model.py  test_revision.py  test_update.py
tests/odm/query/: test_aggregate.py  test_aggregate_methods.py  test_delete.py  test_find.py  test_update.py
